# mprisv

./: .gitignore  README.md  default.nix  flake.nix  pyproject.toml
src/mprisv/: bluez.py  core.py  events.py  interface.py  logger.py  login.py  main.py  player.py  player_manager.py  signals.py  utils.py
src/mprisv/introspection/: bluez.xml  dbus.xml  login.xml  mpris.xml  mprisv.xml
tests/: test_bluez.py  test_events.py  test_utils.py
