[tool.poetry]
name = "mprisv"
version = "0.1.0"
description = "A small daemon for automatically controlling mpris compatible media players"
authors = ["rembo10 <rembo10@users.noreply.github.com>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.scripts]
mprisv = "mprisv.main:start"

[tool.poetry.dependencies]
python = "^3.12"
dbus-next = "^0.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
